aplique los partials

--- a/views/products/creacionProductos.ejs
+++ b/views/products/creacionProductos.ejs
@@ -2,18 +2,14 @@
 <html lang="en">
 <head>
   
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creación y Edición de Productos</title>
+  <%- include('../partials/head')  %>
   <link rel="stylesheet" type="text/css" href="/css/creacionProductos.css">
 </head>
 
-
-<head>
-  <title>Formulario de Creación de Productos</title>
-</head>
 <body>
+  
+  <%- include('../partials/header')  %>
+  <main>
   <h1>Formulario de Creación de Productos</h1>
   
   <form action="/guardar" method="POST">
@@ -39,6 +35,8 @@
 
     <input type="submit" value="Cargar">
   </form>
+</main>
+<%- include('../partials/footer') %>
 </body>
 </html>
 
