--- a/public/css/creacionProductos.css
+++ b/public/css/creacionProductos.css
@@ -3,13 +3,80 @@
     padding: 0;
     box-sizing: border-box;
   }
-  
   body {
     font-family: Arial, sans-serif;
     background-color: #f3e5c2bd;
     padding: 20px;
   }
   
+  /* sección navbar */
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.center-navbar {
+  display: flex;
+  justify-content: center;
+}
+
+.logo {
+  width: 20%;
+}
+
+.left-navbar {
+  display: flex;
+}
+
+.hamburguer-button {
+  display: flex;
+  justify-content: center;
+  background-color: #091A26;
+  border-radius: 10%;
+  color: #ebebeb;
+  width: 55px;
+  height: 45px;
+  font-size: 40px;
+}
+
+.right-navbar {
+  display: flex;
+  list-style: none;
+  gap: 25px;
+}
+
+/* Tip: modifica todos los iconos */
+.material-symbols-outlined {
+  color: #ebebeb;
+  font-variation-settings:
+      'FILL' 0,
+      'wght' 700,
+      'GRAD' 0,
+      'opsz' 48
+}
+header {
+  background-color: #122f44;
+  padding: 20px;
+  margin: 0 auto;
+}
+
+main {
+  width: 100%;
+  background-color: #F3E8CC;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+body p {
+  font-weight: 400;
+}
+
+.container{
+  padding: 1rem;
+}
+
   h1 {
     text-align: center;
     color: #091a26;
@@ -62,5 +129,36 @@
     background-color: #091a26;
   }
   
-  
-  
+  footer {
+    background-color: #EAE2CD;
+}
+
+.main-footer {
+    text-align: center;
+    padding: 15px;
+    margin: 0 auto;
+}
+
+.main-container-footer {
+    margin-top: 20px;
+}
+
+.container-footer-icon {
+    color: #091A26;
+}
+
+.bottom-footer-text{
+    text-align: center;
+    padding-bottom: 20px;
+}
+@media (min-width: 668px) {
+
+.main-footer {
+  display: flex;
+  flex-direction: row;
+}
+.main-container-footer {
+  text-align: center;
+  margin: 15px;
+}
+};
