agrego los partials a la vista edicionProductos de Omar

--- a/views/products/edicionProductos.ejs
+++ b/views/products/edicionProductos.ejs
@@ -1,43 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <%- include('../partials/head') %>
     <link rel="stylesheet" type="text/css" href="/css/creacionProductos.css">
-    <title>Document</title>
 </head>
 
+<body>
+  <%- include('../partials/header') %>
+    <main>
+      <h1>Formulario de Edición de Productos</h1>
+      <form action="/editar" method="POST">
+        <label for="nombre">Nombre del producto:</label>
+        <input type="text" id="nombre" name="nombre" required>
 
-<head>
-    <title>Formulario de Edición de Productos</title>
-  </head>
-  <body>
-    <h1>Formulario de Edición de Productos</h1>
-    
-    <form action="/editar" method="POST">
-      <label for="nombre">Nombre del producto:</label>
-      <input type="text" id="nombre" name="nombre" required>
-  
-      <label for="precio">Precio:</label>
-      <input type="number" id="precio" name="precio" required>
-  
-      <label for="categoria">Categoría:</label>
-      <select id="categoria" name="categoria" required>
-        <option value="">Seleccionar</option>
-        <option value="sillas">Sillas</option>
-        <option value="mesas">Mesas</option>
-        <option value="sofas">Sofás</option>
-      </select>
-  
-      <label for="imagen">Imagen del producto:</label>
-      <input type="file" id="imagen" name="imagen" accept="image/*" required>
-  
-      <label for="descripcion">Descripción:</label>
-      <textarea id="descripcion" name="descripcion" required></textarea>
-  
-      <input type="submit" value="Guardar">
-    </form>
-  </body>
-  </html>
-  
+        <label for="precio">Precio:</label>
+        <input type="number" id="precio" name="precio" required>
+
+        <label for="categoria">Categoría:</label>
+        <select id="categoria" name="categoria" required>
+          <option value="">Seleccionar</option>
+          <option value="sillas">Sillas</option>
+          <option value="mesas">Mesas</option>
+          <option value="sofas">Sofás</option>
+        </select>
+
+        <label for="imagen">Imagen del producto:</label>
+        <input type="file" id="imagen" name="imagen" accept="image/*" required>
+
+        <label for="descripcion">Descripción:</label>
+        <textarea id="descripcion" name="descripcion" required></textarea>
+
+        <input type="submit" value="Guardar">
+      </form>
+    </main>
+    <%- include('../partials/footer') %>
+</body>
+</html>
