correción de tags ejs

--- a/views/products/listProducts.ejs
+++ b/views/products/listProducts.ejs
@@ -20,8 +20,8 @@
                             <p class="categoria"><%= producto.categoria %></p>
                             <p class="nombre"><%= producto.name %></p>
                             <div class="container-money">
-                                <p class="precio"> <%= producto.Precio %></p>
-                                <p class="descuento"> <%= producto.Descuento %>% OFF</p>
+                                <p class="precio"> <%= producto.precio %></p>
+                                <p class="descuento"> <%= producto.descuento %>% OFF</p>
                             </div>
                         </div>
                     </article>
