resolviendo error tag ejs en descripción

--- a/views/products/edicionProductos.ejs
+++ b/views/products/edicionProductos.ejs
@@ -37,7 +37,7 @@
         <% } %>
         
         <label for="descripcion">Descripción</label>
-        <textarea id="descripcion" name="descripcion" value="<%= product.descripcion %>" required></textarea>
+        <textarea id="descripcion" name="descripcion" required> <%= product.descripcion %></textarea>
         
         <input type="submit" value="Guardar">
       </form>
