--- a/views/products/edicionProductos.ejs
+++ b/views/products/edicionProductos.ejs
@@ -17,6 +17,8 @@
 
         <label for="precio">Precio</label>
         <input type="text" id="precio" name="precio" value="<%= product.precio %>" required>
+        <label for="descuento">Descuento</label>
+        <input type="number" id="descuento" name="descuento" value="<%= product.descuento %>" required>
 
         <label for="categoria">Categoría</label>
         <input type="text" id="categoria" name="categoria" value="<%= product.categoria %>" required>
@@ -38,6 +40,9 @@
         
         <label for="descripcion">Descripción</label>
         <textarea id="descripcion" name="descripcion" required> <%= product.descripcion %></textarea>
+        
+        <label for="garantia">Garantía</label>
+        <textarea id="garantia" name="garantia" required> <%= product.garantia %></textarea>
         
         <input type="submit" value="Guardar">
       </form>
