--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
         </div>
 
         <div class="center-navbar">
-            <img src="./img/img-furni-house-logo.svg" alt="logo" class="logo">
+            <img src="/img/img-furni-house-logo.svg" alt="logo" class="logo">
         </div>
 
         <ul class="right-navbar">
