--- a/views/products/creacionProductos.ejs
+++ b/views/products/creacionProductos.ejs
@@ -12,7 +12,7 @@
   <main>
   <h1>Formulario de Creación de Productos</h1>
   
-  <form action="/guardar" method="POST">
+  <form action="/products" method="post">
     <label for="nombre">Nombre del producto:</label>
     <input type="text" id="nombre" name="nombre" required>
 
