--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -14,18 +14,24 @@
     <main>
 
         <h1>Registro</h1>
-        <form>
-            <label for="nombre">Nombre:</label>
-            <input type="text" id="nombre" name="nombre" required>
+        <form action="/users" method="post" enctype="multipart/form-data">
+            <label for="first_name">Nombre</label>
+            <input type="text" id="" name="first_name" required>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+            <label for="last_name">Apellido</label>
+            <input type="text" id="" name="last_name" required>
 
-            <label for="contrasena">Contraseña:</label>
-            <input type="password" id="contrasena" name="contrasena" required>
+            <label for="email">Email</label>
+            <input type="email" id="" name="email" required>
 
-            <label for="confirmar-contrasena">Confirmar Contraseña:</label>
-            <input type="password" id="confirmar-contrasena" name="confirmar-contrasena" required>
+            <label for="image">Foto de perfil</label>
+            <input type="file" id="" name="image" accept="image/*">
+
+            <label for="contraseña">Contraseña</label>
+            <input type="password" id="" name="contraseña" required>
+
+            <label for="confirmar-contrasena">Confirmar Contraseña</label>
+            <input type="password" id="" name="confirmar-contrasena" required>
 
             <input type="submit" value="Registrarse">
         </form>
