--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -28,10 +28,10 @@
             <input type="file" id="" name="image" accept="image/*">
 
             <label for="contraseña">Contraseña</label>
-            <input type="password" id="" name="contraseña" required>
+            <input type="password" id="" name="password" required>
 
             <label for="confirmar-contrasena">Confirmar Contraseña</label>
-            <input type="password" id="" name="confirmar-contrasena" required>
+            <input type="password" id="" name="confirm-password" required>
 
             <input type="submit" value="Registrarse">
         </form>
