--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -11,28 +11,28 @@
     <%- include('../partials/header')%>
     <main>
 
-        <form>
+        <form action="/" method="POST">
             <span class="material-symbols-outlined">account_circle</span>
-
+        
             <div>
                 <label>Email</label>
                 <input type="email" name="email">
             </div>
-
+        
             <div>
                 <label>Contraseña</label>
                 <input type="password" name="contraseña">
             </div>
-
-            <label class= "cursiva">Recordar datos</label>
-            <label class= "cursiva">¿Olvidaste la constraseña?</label>
-
+        
+            <label class="cursiva">Recordar datos</label>
+            <label class="cursiva">¿Olvidaste la constraseña?</label>
+        
             <button type="submit">Ingresar</button>
-
-            <p class="registro">Registrate</p>
+        
+            <p class="registro"><a href="/users/register">Registrate</a></p>
             <span class="material-symbols-outlined email">mail</span>
-
         </form>
+        
 
 
     </main>
