agrego explicación del enctype

--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -14,7 +14,7 @@
     <main>
 
         <h1>Registro</h1>
-        <form action="/users" method="post" enctype="multipart/form-data">
+        <form action="/users" method="post" enctype="multipart/form-data"> <!-- atributo para permitir enviar archivos (img,docs) con el fin de que los codifique para que el servidor los reciba -->
             <label for="first_name">Nombre</label>
             <input type="text" id="" name="first_name" required>
 
