Agregando vista perfil usuario

--- a/views/products/productDetail.ejs
+++ b/views/products/productDetail.ejs
@@ -15,25 +15,9 @@
             <section class="container">
                 <article class="container-product">
                     <div class="container-product-mainpicture">
-                        <img src=<%= product.image %>alt="Imagen de una mesa familiar que esta en venta">
+                        <img src=<%= product.img %>alt="Imagen de una mesa familiar que esta en venta">
                     </div>
-                    <!-- <div class="container-product-smallpicture">
-                        <div class="container-smallpicture">
-                            <img id="image-1" src="./img/img-mesa-unity1.jpg"
-                                alt="Imagen de una mesa familiar que esta en venta">
-                        </div>
-                        <div class="container-smallpicture">
-                            <img id="image-2" src="./img/img-mesa-unity2.jpg"
-                                alt="Imagen de una mesa familiar que esta en venta">
-                        </div>
-                        <div class="container-smallpicture">
-                            <img id="image-3" src="./img/img-mesa-unity3.jpg"
-                                alt="Imagen de una mesa familiar que esta en venta">
-                        </div>
-                        <div class="container-smallpicture">
-                            <img id="image-4" src="./img/img-mesa-unity4.jpg"
-                                alt="Imagen de una mesa familiar que esta en venta">
-                        </div> -->
+
                     <div class="container-productDetail-info">
 
                             <h2><%= product.name %></h2>
