--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -27,10 +27,10 @@
             <label for="image">Foto de perfil</label>
             <input type="file" id="" name="image" accept="image/*">
 
-            <label for="contraseña">Contraseña</label>
+            <label for="password">Contraseña</label>
             <input type="password" id="" name="password" required>
 
-            <label for="confirmar-contrasena">Confirmar Contraseña</label>
+            <label for="confirm-password">Confirmar Contraseña</label>
             <input type="password" id="" name="confirm-password" required>
 
             <input type="submit" value="Registrarse">
