--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -25,7 +25,7 @@
             <input type="email" id="" name="email" required>
 
             <label for="image">Foto de perfil</label>
-            <input type="file" id="" name="image" accept="image/*">
+            <input type="file" id="" name="image" accept="image/*" required>
 
             <label for="password">Contraseña</label>
             <input type="password" id="" name="password" required>
