--- a/views/products/edicionProductos.ejs
+++ b/views/products/edicionProductos.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <%- include('../partials/head') %>
-    <link rel="stylesheet" type="text/css" href="/css/edicionProductos.css">
+    <link rel="stylesheet" type="text/css" href="/css/edicion.css">
 </head>
 
 <body>
