--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -13,11 +13,11 @@
         <h1>Edición del perfil</h1>
         <div class="formPut">
           <form action="/products/edit/<%= user.id %>?_method=put" method="post" enctype="multipart/form-data">
-            <label for="name">Nombre</label>
-            <input type="text" id="" name="name" value="<%= user.first_name %>" required>
+            <label for="first_name">Nombre</label>
+            <input type="text" id="first_name" name="first_name" value="<%= user.first_name %>" required>
 
-            <label for="surname">Apellidos</label>
-            <input type="text" id="" name="surname" value="<%= user.last_name %>" required>
+            <label for="last_name">Apellidos</label>
+            <input type="text" id="last_name" name="last_name" value="<%= user.last_name %>" required>
             <label for="email">Email</label>
             <input type="email" id="" name="email" value="<%= user.email %>" required>
 
