--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -12,7 +12,7 @@
       <div class="container">
         <h1>Edición del perfil</h1>
         <div class="formPut">
-          <form action="/products/edit/<%= user.id %>?_method=put" method="post" enctype="multipart/form-data">
+          <form action="/users/edit/<%= user.id %>?_method=PUT" method="post" enctype="multipart/form-data">
             <label for="first_name">Nombre</label>
             <input type="text" id="first_name" name="first_name" value="<%= user.first_name %>" required>
 
