--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
+    <nav>
+        <h1><%= userData.first_name %></h1>
+        <h1><%= userData.email %></h1>
+      </nav>
     <!-- header -->
     <%- include('../partials/header') %>
     <main>
