--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -21,7 +21,7 @@
 
                 <div>
                     <label>Contraseña</label>
-                    <input type="password" name="contraseña">
+                    <input type="password" name="password">
                 </div>
 
                 <label class="cursiva">Recordar datos</label>
