modificamos usercontrollers(userProfile),para renderizar los modelos en los controladores,adicional modificamos user.profile en ejs para que nos den bien los datos

--- a/views/users/usersProfile.ejs
+++ b/views/users/usersProfile.ejs
@@ -25,9 +25,9 @@
             </div>
             <div class="sub-titulos">Datos Personales</div>
             <div class="datosPersonales">
-                <div>id:<%= user.id %></div>
-                <div>Nombre:<%= user.first_name %></div>
-                <div>Apellido: <%= user.last_name %></div>
+                <div>id:<%= user.id_usuario %></div>
+                <div>Nombre:<%= user.nombre %></div>
+                <div>Apellido: <%= user.apellido %></div>
                 <div>Email: <%= user.email  %></div>
                 <div>Categoria <%= user.categoria  %></div>
             </div>
