realización retro sprint-5

--- a/views/products/creacionProductos.ejs
+++ b/views/products/creacionProductos.ejs
@@ -16,8 +16,8 @@
     <label for="name">Nombre del producto:</label>
     <input type="text" id="" name="nombre" required>
 
-    <label for="name">ID del producto:</label>
-    <input type="number" id="" name="id" required>
+<!--     <label for="name">ID del producto:</label>
+    <input type="number" id="" name="id" required> -->
 
     <label for="precio">Precio:</label>
     <input type="number" id="" name="precio" required>
