--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -15,11 +15,11 @@
 
         <h1>Registro</h1>
         <form action="/users" method="post" enctype="multipart/form-data"> <!-- atributo para permitir enviar archivos (img,docs) con el fin de que los codifique para que el servidor los reciba -->
-            <label for="first_name">Nombre</label>
-            <input type="text" id="" name="first_name" required>
+            <label for="nombre">Nombre</label>
+            <input type="text" id="" name="nombre" required>
 
-            <label for="last_name">Apellido</label>
-            <input type="text" id="" name="last_name" required>
+            <label for="apellido">Apellido</label>
+            <input type="text" id="" name="apellido" required>
 
             <label for="email">Email</label>
             <input type="email" id="" name="email" required>
