--- a/views/users/usersProfile.ejs
+++ b/views/users/usersProfile.ejs
@@ -33,7 +33,7 @@
                 <div>Email: <%= user.email  %></div>
                 <div>Categoria <%= user.categoria  %></div>
             </div>
-            <form action= "/users/delete/<%= user.id %>?_method=DELETE" method="post" class="datosPersonales">
+            <form action= "/users/delete/<%= user.id_usuario %>?_method=DELETE" method="post" class="datosPersonales">
                 <button type="submit">Eliminar</button>
             </form>
         </main>
