--- a/views/products/listProducts.ejs
+++ b/views/products/listProducts.ejs
@@ -15,13 +15,16 @@
             <section class="container">
                 <% productos.forEach(producto => { %>
                     <article class="container-product">
-                        <img class="container-product-img" src=" <%= producto.imagen %>" alt="imagen de un producto">
+                        <img class="container-product-img" src="/img/<%= producto.imagen %>.jpg" alt="imagen de un producto">
+                        <script>
+                            console.log("Nombre de imagen: <%= producto.imagen %>");
+                        </script>
                         <div class="container-product-description">
                             <p class="categoria"><%= producto.categoria %></p>
                             <p class="nombre"><%= producto.nombre %></p>
                             <div class="container-money">
                                 <p class="precio"> <%= producto.precio %></p>
-                                <p class="descuento"> <%= producto.descuento %>% OFF</p>
+                                <p class="descuento"> Disponibles <%= producto.cantidad %></p>
                             </div>
                         </div>
                     </article>
