cambios en la interfaz de usuarios y productos

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -11,15 +11,21 @@
 header {
     background-color: #122f44;
     padding: 20px;
-    margin: 0 auto;
 }
 
+html, body {
+    height: 100%;
+    margin: 0;
+}
 main {
+    flex: 1;
     width: 100%;
     background-color: #F3E8CC;
 }
 
 body {
+    display: flex;
+    flex-direction: column;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -45,7 +51,20 @@ nav {
 .logo {
     width: 20%;
 }
+/* este es el ul */
+#navbar-list {
+    list-style-type: none;
+    display: none;
 
+}
+/* este es el a dentro de los li del ul*/
+#navbar-list li a{
+    text-decoration: none;
+    list-style: none;
+    font-family: 'Roboto', sans-serif;
+
+    
+}
 .left-navbar {
     display: flex;
 }
@@ -236,6 +255,8 @@ h2 {
 /* footer */
 footer {
     background-color: #EAE2CD;
+    text-align: center;
+    padding: 15px;
 }
 
 .main-footer {
@@ -293,4 +314,8 @@ footer {
     .container-product {
         max-width: 50%;
     }
+}
+
+@keyframes identifier {
+    
 }
