--- a/public/css/productDetail.css
+++ b/public/css/productDetail.css
@@ -12,7 +12,7 @@
 header {
     background-color: #122f44;
     padding: 20px;
-    margin: 0 auto;
+
 }
 
 main {
@@ -37,6 +37,22 @@ body p {
 
 
 
+#navbar-list {
+    list-style-type: none;
+    display: none;
+
+}
+/* este es el a dentro de los li del ul*/
+#navbar-list li a{
+    text-decoration: none;
+    list-style: none;
+    font-family: 'Roboto', sans-serif; 
+}
+
+#navbar-list li a:hover {
+    color: red; /* Cambia el color de fondo al pasar el cursor */
+    font-weight: bold;
+}
 /* sección navbar */
 nav {
     display: flex;
@@ -94,7 +110,13 @@ nav i {
 
 /* sección visualización del producto */
 
+.main-detail {
+    display: grid;
+}
 .container-product {
+    grid-column: span 2;
+    width: 100%;
+    height: 100%;
     background-color: #EAE2CD;
     padding: 15px;
 }
