--- a/views/products/listProducts.ejs
+++ b/views/products/listProducts.ejs
@@ -5,6 +5,8 @@
     <%- include('../partials/head') %>
 
         <link rel="stylesheet" href="/css/listProducts.css">
+        <link rel="stylesheet" href="/css/index.css">
+        
 </head>
 
 <body>
