--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -4,6 +4,7 @@
 <head>
     <%- include('../partials/head')%>
         <link rel="stylesheet" href="/css/login.css">
+        <link rel="stylesheet" href="/css/index.css">
 </head>
 
 <body>
