--- a/views/products/creacionProductos.ejs
+++ b/views/products/creacionProductos.ejs
@@ -4,6 +4,7 @@
   
   <%- include('../partials/head')  %>
   <link rel="stylesheet" type="text/css" href="/css/creacionProductos.css">
+  <link rel="stylesheet" href="/css/index.css">
 </head>
 
 <body>
