--- a/views/products/productCard.ejs
+++ b/views/products/productCard.ejs
@@ -5,6 +5,7 @@
     <%- include('../partials/head') %>
 
         <link rel="stylesheet" href="/css/productCard.css">
+        <link rel="stylesheet" href="/css/index.css">
 
 </head>
 
