--- a/views/products/productDetail.ejs
+++ b/views/products/productDetail.ejs
@@ -5,13 +5,14 @@
     <%- include('../partials/head') %>
 
         <link rel="stylesheet" href="/css/productDetail.css">
+    
 </head>
 
 <body>
 
     <%- include('../partials/header') %>
 
-        <main>
+        <main class="main-detail">
             <section class="container">
                 <article class="container-product">
                     <div class="container-product-mainpicture">
@@ -47,7 +48,7 @@
                             <p class="descuento"><%= product.descuento %>% OFF</p>
                         </div>
                         
-                        <form action="#" method="POST">
+                        <form action="/" method="POST">
                             <div class="cantidad">
                                 <label for="cantidad">Cantidad</label>
                                 <input type="number" id="cantidad" name="cantidad" min="0" value="1"
