--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -4,6 +4,7 @@
 <head>
   <%- include('../partials/head') %>
     <link rel="stylesheet" type="text/css" href="/css/edicion.css">
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 
 <body>
