agregamos sequelize products controllers

--- a/views/products/edicionProductos.ejs
+++ b/views/products/edicionProductos.ejs
@@ -39,7 +39,7 @@
           </form>
         </div>
         <div class="formDelete">
-          <form action="/products/<%= product.id %>/delete?_method=delete" method="post">
+          <form action="/products/<%= product.id_producto %>/delete?_method=delete" method="post">
             <input type="hidden" name="_method" value="DELETE">
             <input type="submit" value="Eliminar">
           </form>
