--- a/public/css/listProducts.css
+++ b/public/css/listProducts.css
@@ -152,6 +152,10 @@ h2 {
     margin-left: 5px;
 }
 
+.detalle {
+    margin-left: 10px;
+}
+
 /* footer */
 footer {
     background-color: #EAE2CD;
