estilos de botones para products Card

--- a/views/products/listProducts.ejs
+++ b/views/products/listProducts.ejs
@@ -29,6 +29,9 @@
                             <div>
                                 <a class="detalle" href="/products/<%= producto.id_producto %>/detail">Ver detalle</a>
                             </div>
+                            <div>
+                                <a class="edicion" href="/products/<%= producto.id_producto %>/update">Editar</a>
+                            </div>
                         </div>
                     </article>
                 <% }) %>
