--- a/public/css/listProducts.css
+++ b/public/css/listProducts.css
@@ -154,6 +154,13 @@ h2 {
 
 .detalle {
     margin-left: 10px;
+    text-decoration: none;
+}
+
+.edicion {
+    margin-left: 10px;
+    margin-top: 10px;
+    text-decoration: none;
 }
 
 /* footer */
