agrego imagenes sliders

--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -17,9 +17,9 @@
             <section class="container"></section> <!-- container -->
             <article class="container-carousel"> <!-- slider-wrapper -->
                 <div class="container-carousel-images"> <!-- slider -->
-                    <img id="slide-1" src="./img/img-wood-mood.jpg" alt="publicidad">
-                    <img id="slide-2" src="./img/img-mesa-unity3.jpg" alt="publicidad">
-                    <img id="slide-3" src="./img/img-mesa-fetich.jpg" alt="publicidad">
+                    <img id="slide-1" src="./img/slider/banner-1.jpg" alt="publicidad">
+                    <img id="slide-2" src="./img/slider/banner-fisrt-impressions.jpg" alt="publicidad">
+                    <img id="slide-3" src="./img/slider/banner-small-product.jpg" alt="publicidad">
                 </div>
                 <div class="slider-nav">
                     <a href="#slide-1"></a>
