agrego acceso directo de creación productos

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,6 +10,7 @@
                 <li><a href="/users/login">login</a></li>
                 <li><a href="/users/register">registro</a></li>
                 <li><a href="/products">productos</a></li>
+                <li><a href="/products/create">creación</a></li>
             </ul>
             <script>
                     const menuList = document.getElementById("navbar-list");
