cmabios de estilos en archivo edicion.css,y su vista html

--- a/public/css/edicion.css
+++ b/public/css/edicion.css
@@ -8,10 +8,14 @@
     font-family: Arial, sans-serif;
     background-color: #f3e5c2bd;
   }
+  
   /* este es el ul */
-#navbar-list {
-  list-style-type: none;
-  display: none;
+  #navbar-list {
+    list-style-type: none;
+    display: none;
+    background-color: #e9eadd;
+    color: black;
+    border-radius: 10 px;
 
 }
 /* este es el a dentro de los li del ul*/
@@ -19,11 +23,11 @@
   text-decoration: none;
   list-style: none;
   font-family: 'Roboto', sans-serif;
-
+  color: black;
   
 }
 #navbar-list li a:hover {
-  color: red; /* Cambia el color de fondo al pasar el cursor */
+  color: rgb(99, 9, 9); /* Cambia el color de fondo al pasar el cursor */
   font-weight: bold;
 }
   
