--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -22,7 +22,7 @@
 
                 <div>
                     <label>Contraseña</label>
-                    <input type="password" name="password">
+                    <input type="password" name="contrasena">
                 </div>
 
                 <label class="cursiva">Recordar datos</label>
