--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -17,22 +17,76 @@
         <h1>Registro</h1>
         <form action="/users" method="post" enctype="multipart/form-data"> <!-- atributo para permitir enviar archivos (img,docs) con el fin de que los codifique para que el servidor los reciba -->
             <label for="nombre">Nombre</label>
-            <input type="text" id="" name="nombre" required>
+            <input 
+             type="text"
+             id="" 
+             name="nombre" 
+            class="form-control <%= locals.errors && errors.nombre ? 'is-invalid' : null %>"
+            value="<%= locals.oldData ? oldData.nombre : null %>">
+            
+            <% if (locals.errors && errors.nombre) { %>
+                <div class="text-danger">
+                    <%= errors.nombre.msg %> 
+                </div>
+            <% } %>
 
             <label for="apellido">Apellido</label>
-            <input type="text" id="" name="apellido" required>
+            <input 
+            type="text"
+             id="" 
+             name="apellido" 
+            class="form-control <%= locals.errors && errors.apellido? 'is-invalid' : null %>"
+            value="<%= locals.oldData ? oldData.apellido : null %>">
+
+            <% if (locals.errors && errors.apellido) { %>
+                <div class="text-danger">
+                    <%= errors.apellido.msg %> 
+                </div>
+            <% } %>
 
             <label for="email">Email</label>
-            <input type="email" id="" name="email" required>
+            <input 
+            type="email" 
+            id="" 
+            name="email" 
+            class="form-control <%= locals.errors && errors.email ? 'is-invalid' : null %>"
+            value="<%= locals.oldData ? oldData.email : null %>">
+
+            <% if (locals.errors && errors.email) { %>
+                <div class="text-danger">
+                    <%= errors.email.msg %> 
+                </div>
+            <% } %>
 
             <label for="image">Foto de perfil</label>
-            <input type="file" id="" name="image" accept="image/*" required>
+            <input 
+            type="file" 
+            id="" 
+            name="image" 
+            accept="image/*" 
+            class="form-control <%= locals.errors && errors.image ? 'is-invalid' : null %>"
+            value="<%= locals.oldData ? oldData.image : null %>">
+
+            <% if (locals.errors && errors.image) { %>
+                <div class="text-danger">
+                    <%= errors.image.msg %> 
+                </div>
+            <% } %>
 
             <label for="password">Contraseña</label>
-            <input type="password" id="" name="password" required>
+            <input 
+            type="password" 
+            id="" 
+            name="contrasena" 
+            class="form-control <%= locals.errors && errors.contrasena ? 'is-invalid' : null %>"
+            value="<%= locals.oldData ? oldData.contrasena : null %>">
 
-            <label for="confirm-password">Confirmar Contraseña</label>
-            <input type="password" id="" name="confirm-password" required>
+            <% if (locals.errors && errors.contrasena) { %>
+                <div class="text-danger">
+                    <%= errors.contrasena.msg %> 
+                </div>
+            <% } %>
+
 
             <input type="submit" value="Registrarse">
         </form>
