creacion de validaciones en crear productos

--- a/public/css/creacionProductos.css
+++ b/public/css/creacionProductos.css
@@ -117,7 +117,7 @@ body p {
   
   input[type="submit"] {
     background-color: #EAE2CD;
-    color: #000000;
+    color: #b40303;
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
