--- a/views/products/creacionProductos.ejs
+++ b/views/products/creacionProductos.ejs
@@ -14,26 +14,95 @@
   <h1>Formulario de Creación de Productos</h1>
   
   <form action="/products" method="post" enctype="multipart/form-data">
-    <label for="name">Nombre del producto:</label>
-    <input type="text" id="" name="nombre" required>
+    <label for="nombre">Nombre del producto:</label>
+    
+    <input 
+    type="text" 
+    id="" 
+    name="nombre"
+    class="form-control <%= locals.errors && errors.nombre ? 'is-invalid' : null %>"
+            value="<%= locals.oldData ? oldData.nombre : null %>">
+
+            <% if (locals.errors && errors.nombre) { %>
+                <div class="text-danger">
+                    <%= errors.nombre.msg %> 
+                </div>
+            <% } %>
 
 <!--     <label for="name">ID del producto:</label>
     <input type="number" id="" name="id" required> -->
 
     <label for="precio">Precio:</label>
-    <input type="number" id="" name="precio" required>
+    <input 
+    type="number" 
+    id="" 
+    name="precio"
+   class="form-control <%= locals.errors && errors.precio ? 'is-invalid' : null %>"
+            value="<%= locals.oldData ? oldData.precio : null %>">
+
+            <% if (locals.errors && errors.precio) { %>
+                <div class="text-danger">
+                    <%= errors.precio.msg %> 
+                </div>
+            <% } %>
 
     <label for="categoria">Categoría</label>
-    <input type="text" id="" name="categoria" required>
+    <input 
+    type="text" 
+    id="" 
+    name="categoria"
+    class="form-control <%= locals.errors && errors.categoria ? 'is-invalid' : null %>"
+            value="<%= locals.oldData ? oldData.categoria : null %>">
+
+            <% if (locals.errors && errors.categoria) { %>
+                <div class="text-danger">
+                    <%= errors.categoria.msg %> 
+                </div>
+            <% } %>
 
     <label for="image">Imagen del producto:</label>
-    <input type="file" id="" name="imagen" accept="image/*" required>
+    <input 
+    type="file" 
+    id="" 
+    name="imagen" 
+    accept="image/*"
+    class="form-control <%= locals.errors && errors.imagen ? 'is-invalid' : null %>"
+            value="<%= locals.oldData ? oldData.imagen : null %>">
+
+            <% if (locals.errors && errors.imagen) { %>
+                <div class="text-danger">
+                    <%= errors.imagen.msg %> 
+                </div>
+            <% } %>
 
     <label for="descripcion">Descripción:</label>
-    <textarea id="" name="descripcion" required></textarea>
+    <input 
+    id="" 
+    name="descripcion" 
+    class="form-control <%= locals.errors && errors.descripcion ? 'is-invalid' : null %>"
+            value="<%= locals.oldData ? oldData.descripcion : null %>">
+          
 
-    <label for="precio">Cantidad:</label>
-    <input type="number" id="" name="cantidad" required>
+            <% if (locals.errors && errors.descripcion) { %>
+                <div class="text-danger">
+                    <%= errors.descripcion.msg %> 
+                </div>
+            <% } %>
+            
+
+    <label for="cantidad">Cantidad:</label>
+    <input 
+    type="number" 
+    id="" 
+    name="cantidad"
+    class="form-control <%= locals.errors && errors.cantidad ? 'is-invalid' : null %>"
+            value="<%= locals.oldData ? oldData.cantidad : null %>">
+
+            <% if (locals.errors && errors.cantidad) { %>
+                <div class="text-danger">
+                    <%= errors.cantidad.msg %> 
+                </div>
+            <% } %>
 
     <input type="submit" value="Cargar">
   </form>
