Agregando correción de puerto de react

--- a/public/css/creacionProductos.css
+++ b/public/css/creacionProductos.css
@@ -115,6 +115,10 @@ body p {
     margin-bottom: 10px;
   }
   
+  .text-danger {
+    color: red;
+  }
+  
   input[type="submit"] {
     background-color: #EAE2CD;
     color: #b40303;
